# Project-Management-Platform

./: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  TROUBLESHOOTING.md
backend/auth-service/: Dockerfile  pyproject.toml  requirements.txt
backend/insights-service/: Dockerfile  pyproject.toml  requirements.txt
backend/migrations/: 002_audit_trail_rbac.sql
backend/project-service/: Dockerfile  pyproject.toml  requirements.txt
backend/shared/: pyproject.toml
backend/shared/shared/: __init__.py
backend/shared/shared/auth/: __init__.py  dependencies.py  jwt.py  permissions.py
backend/shared/shared/database/: __init__.py  base.py  mixins.py  session.py
backend/shared/shared/messaging/: __init__.py  events.py  publisher.py  redis_streams.py  subscriber.py
backend/shared/shared/schemas/: __init__.py  pagination.py  responses.py
backend/timesheet-service/: pyproject.toml
backend/timesheet-service/app/: __init__.py  main.py
backend/timesheet-service/app/api/: __init__.py
backend/timesheet-service/app/api/v1/: __init__.py
backend/timesheet-service/app/events/: __init__.py
backend/timesheet-service/app/models/: __init__.py
backend/timesheet-service/app/repositories/: __init__.py
backend/timesheet-service/app/schemas/: __init__.py
backend/timesheet-service/app/services/: __init__.py
docker/: docker-compose.yml  init-db.sql  nginx.conf
docs/architecture/: system_architecture.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
scripts/: seed-data.py
(+97 files in other folders)
